feat(backend,frontend,common,client): additional improvements
