# packages/backend/src/kit/models/kitManager.ts
@@ -1,6 +1,7 @@
 import { Logger } from '@map-colonies/js-logger';
 import { inject, injectable } from 'tsyringe';
-import { REDIS_KITS_SET_KEY, SERVICES } from '../../common/constants';
+import { KitMetadata } from '@map-colonies/detiler-common';
+import { REDIS_KITS_HASH_PREFIX, SERVICES } from '../../common/constants';
 import { RedisClient } from '../../redis';
 import { KitAlreadyExistsError } from './errors';
 import { Kit } from './kit';
@@ -9,12 +10,14 @@ import { Kit } from './kit';
 export class KitManager {
   public constructor(@inject(SERVICES.LOGGER) private readonly logger: Logger, @inject(SERVICES.REDIS) private readonly redis: RedisClient) {}
 
-  public async getAllKits(): Promise<string[]> {
+  public async getAllKits(): Promise<KitMetadata[]> {
     this.logger.info('getting all kits');
 
-    const kits = await this.redis.sMembers(REDIS_KITS_SET_KEY);
+    const keys = await this.redis.keys(`${REDIS_KITS_HASH_PREFIX}:*`);
 
-    this.logger.debug({ msg: 'fetched kits', count: kits.length });
+    const kits = (await Promise.all(keys.map(async (key) => this.redis.hGetAll(key)))) as KitMetadata[];
+
+    this.logger.debug({ msg: 'fetched kits', count: kits.length, kits });
 
     return kits;
   }
@@ -22,12 +25,12 @@ export class KitManager {
   public async createKit(kit: Kit): Promise<void> {
     this.logger.info({ msg: 'creating new kit', kit });
 
-    const kits = await this.redis.sMembers(REDIS_KITS_SET_KEY);
+    const existingKit = (await this.redis.hGet(`${REDIS_KITS_HASH_PREFIX}:${kit.name}`, 'name')) as string | null;
 
-    if (kits.includes(kit.name)) {
+    if (existingKit !== null) {
       throw new KitAlreadyExistsError(`kit named ${kit.name} already exists`);
     }
 
-    await this.redis.sAdd(REDIS_KITS_SET_KEY, kit.name);
+    await this.redis.hSet(`${REDIS_KITS_HASH_PREFIX}:${kit.name}`, { ...kit, maxUpdatedAt: 0, maxState: 0 });
   }
 }
